[build-system]

requires = [
   "setuptools",
   "wheel"
]

build-backend = "setuptools.build_meta"

[project]

name="swellpy"
version="0.0.1"
description = "Python API Wrapper for Swell"
classifiers = ["Programming Language :: Python :: 3"]
authors = [{ name="Greg Hoskin", email="greg@swell.is"}, { "name"="Musafa Hoda", email="mustafa@swell.is"}]
dependencies = [
   "requests",
   "requests-toolbelt",
   "ratelimit"
]
