[build-system]

requires = [
   "setuptools",
   "wheel"
]

build-backend = "setuptools.build_meta"

[project]

name="swellpy"
version="0.0.1"
description = "Python API Wrapper for Swell"
classifiers = ["Programming Language :: Python :: 3"]
authors = [{ name="Greg Hoskin" }, { "name"="Musafa Hoda" }]
dependencies = [
   "requests",
   "requests-toolbelt",
   "ratelimit"
]
