[metadata]
name = swellpy
version = 0.0.1
description = Python API Wrapper for Swell
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = Swell, headless, ecommerce
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    requests
    requests-toolbelt
    ratelimit
